@@ -1,5 +1,6 @@
 Upcoming:
 - Fixed a problem where the shield wasn't decomposed properly if the projector block was broken
+- Re-implemented the filter module for the Builder
 
 1.2.12:
 - Fixed power bar display in the GUI of the shield
